# nestkit

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pre-commit.yml
docs/: 01_basic_usage.ipynb  02_advanced_workflows.ipynb  architecture.rst  changelog.rst  conf.py  index.rst  installation.rst  quickstart.rst  tutorials.rst
docs/_static/: custom.css
docs/api/: calibration.rst  callbacks.rst  comparison.rst  core.rst  diagnostics.rst  importance.rst  index.rst  inner.rst  plotting.rst  results.rst  thresholding.rst
notebooks/: 01_basic_usage.ipynb  02_advanced_workflows.ipynb  README.md
src/nestkit/: __init__.py  _base.py  _constants.py  _validation.py  callbacks.py  classifier.py  regressor.py
src/nestkit/calibration/: __init__.py  calibrators.py  diagnostics.py
src/nestkit/comparison/: __init__.py  comparator.py  statistical_tests.py
src/nestkit/diagnostics/: __init__.py  stability.py
src/nestkit/importance/: __init__.py  aggregator.py  extractors.py  stability.py
src/nestkit/inner/: __init__.py  search.py  tuning_report.py
src/nestkit/plotting/: __init__.py  _style.py  calibration.py  comparison.py  folds.py  importance.py  summary.py  threshold.py  tuning.py
src/nestkit/results/: __init__.py  _base.py  classifier_results.py  regressor_results.py
src/nestkit/thresholding/: __init__.py  criteria.py  results.py  strategies.py
tests/: conftest.py
tests/calibration/: test_calibrators.py  test_diagnostics.py
tests/comparison/: test_comparator.py  test_statistical_tests.py
tests/core/: test_base.py  test_callbacks.py  test_classifier.py  test_edge_cases.py  test_leakage.py  test_regressor.py  test_sklearn_compat.py  test_validation.py
tests/diagnostics/: test_stability.py
tests/importance/: test_extractors_aggregator.py  test_stability.py
tests/inner/: test_report.py  test_search.py
tests/plotting/: test_plotting.py
tests/results/: test_base.py  test_classifier_results.py  test_regressor_results.py
tests/thresholding/: test_criteria_strategies.py  test_results.py
